tests/__snapshots__/validation-semantic-errors-matcher-level-errors-stderr.snap.txt
Error: Expected 0 arguments, but got 1. ts(2554)

   5 | 
   6 | test("has matcher type error?", () => {
   7 |   expect(one()).type.toBe<void>(true);
     |                                 ~~~~
   8 | });
   9 | 
  10 | test("has assertion type error?", () => {

       at ./__typetests__/matcher-level.tst.ts:7:33

Error: Expected 0 arguments, but got 1. ts(2554)

  11 |   expect(one("pass")).type.toRaiseError();
  12 | 
  13 |   expect(one("fail")).type.toBe<void>();
     |              ~~~~~~
  14 | });
  15 | 

       at ./__typetests__/matcher-level.tst.ts:13:14

